# danke/docs/swagger.json
@@ -367,6 +367,58 @@
                 }
             }
         },
+        "/reviews/_sensitive": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Review"
+                ],
+                "summary": "List sensitive reviews, admin only",
+                "parameters": [
+                    {
+                        "type": "boolean",
+                        "name": "all",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "offset",
+                        "in": "query"
+                    },
+                    {
+                        "type": "boolean",
+                        "name": "open",
+                        "in": "query"
+                    },
+                    {
+                        "maximum": 10,
+                        "type": "integer",
+                        "default": 10,
+                        "name": "size",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/schema.SensitiveReviewResponse"
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/common.HttpBaseError"
+                        }
+                    }
+                }
+            }
+        },
         "/reviews/me": {
             "get": {
                 "description": "list my reviews, old version. load history and achievements, no `is_me` field",
@@ -473,6 +525,49 @@
                         "description": "Bad Request",
                         "schema": {
                             "$ref": "#/definitions/common.HttpError"
+                        }
+                    }
+                }
+            }
+        },
+        "/reviews/{id}/_sensitive": {
+            "put": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Review"
+                ],
+                "summary": "Modify A Review's actual_sensitive, admin only",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "json",
+                        "name": "json",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/schema.ModifySensitiveReviewRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.Review"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/common.HttpBaseError"
                         }
                     }
                 }
@@ -811,6 +906,211 @@
                 }
             }
         },
+        "gorm.DeletedAt": {
+            "type": "object",
+            "properties": {
+                "time": {
+                    "type": "string"
+                },
+                "valid": {
+                    "description": "Valid is true if Time is not NULL",
+                    "type": "boolean"
+                }
+            }
+        },
+        "model.Course": {
+            "type": "object",
+            "properties": {
+                "campus_name": {
+                    "description": "开课校区",
+                    "type": "string"
+                },
+                "code": {
+                    "description": "课程编号",
+                    "type": "string"
+                },
+                "code_id": {
+                    "description": "选课序号。用于区分同一课程编号的不同平行班",
+                    "type": "string"
+                },
+                "course_group": {
+                    "$ref": "#/definitions/model.CourseGroup"
+                },
+                "course_group_id": {
+                    "description": "课程组类型",
+                    "type": "integer"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "credit": {
+                    "description": "学分",
+                    "type": "number"
+                },
+                "department": {
+                    "description": "开课学院",
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "max_student": {
+                    "description": "最大选课人数",
+                    "type": "integer"
+                },
+                "name": {
+                    "description": "课程名称",
+                    "type": "string"
+                },
+                "review_count": {
+                    "description": "评教数量",
+                    "type": "integer"
+                },
+                "semester": {
+                    "description": "学期",
+                    "type": "integer"
+                },
+                "teachers": {
+                    "description": "老师：多个老师用逗号分隔",
+                    "type": "string"
+                },
+                "updated_at": {
+                    "type": "string"
+                },
+                "week_hour": {
+                    "description": "周学时",
+                    "type": "integer"
+                },
+                "year": {
+                    "description": "学年",
+                    "type": "integer"
+                }
+            }
+        },
+        "model.CourseGroup": {
+            "type": "object",
+            "properties": {
+                "campus_name": {
+                    "description": "开课校区",
+                    "type": "string"
+                },
+                "code": {
+                    "description": "课程组编号",
+                    "type": "string"
+                },
+                "course_count": {
+                    "description": "课程数量",
+                    "type": "integer"
+                },
+                "courses": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.Course"
+                    }
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "credits": {
+                    "description": "学分",
+                    "type": "array",
+                    "items": {
+                        "type": "number"
+                    }
+                },
+                "department": {
+                    "description": "开课学院",
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "description": "课程组名称",
+                    "type": "string"
+                },
+                "review_count": {
+                    "description": "评价数量",
+                    "type": "integer"
+                },
+                "updated_at": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.Review": {
+            "type": "object",
+            "properties": {
+                "content": {
+                    "type": "string"
+                },
+                "course": {
+                    "$ref": "#/definitions/model.Course"
+                },
+                "course_id": {
+                    "type": "integer"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "deleted_at": {
+                    "$ref": "#/definitions/gorm.DeletedAt"
+                },
+                "downvote_count": {
+                    "type": "integer"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "is_actually_sensitive": {
+                    "type": "boolean"
+                },
+                "is_sensitive": {
+                    "type": "boolean"
+                },
+                "modify_count": {
+                    "type": "integer"
+                },
+                "rank": {
+                    "$ref": "#/definitions/model.ReviewRank"
+                },
+                "reviewer_id": {
+                    "type": "integer"
+                },
+                "sensitive_detail": {
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string"
+                },
+                "updated_at": {
+                    "type": "string"
+                },
+                "upvote_count": {
+                    "type": "integer"
+                }
+            }
+        },
+        "model.ReviewRank": {
+            "type": "object",
+            "properties": {
+                "assessment": {
+                    "description": "考核方面",
+                    "type": "integer"
+                },
+                "content": {
+                    "description": "内容、风格方面",
+                    "type": "integer"
+                },
+                "overall": {
+                    "type": "integer"
+                },
+                "workload": {
+                    "description": "工作量方面",
+                    "type": "integer"
+                }
+            }
+        },
         "schema.AchievementV1Response": {
             "type": "object",
             "properties": {
@@ -1076,6 +1376,14 @@
                     "type": "string",
                     "maxLength": 64,
                     "minLength": 1
+                }
+            }
+        },
+        "schema.ModifySensitiveReviewRequest": {
+            "type": "object",
+            "properties": {
+                "is_actually_sensitive": {
+                    "type": "boolean"
                 }
             }
         },
@@ -1368,6 +1676,38 @@
                 "vote": {
                     "description": "自己是否点赞或点踩，0 未操作，1 点赞，-1 点踩",
                     "type": "integer"
+                }
+            }
+        },
+        "schema.SensitiveReviewResponse": {
+            "type": "object",
+            "properties": {
+                "content": {
+                    "type": "string"
+                },
+                "course": {
+                    "$ref": "#/definitions/schema.CourseV1Response"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "is_actually_sensitive": {
+                    "type": "boolean"
+                },
+                "modify_count": {
+                    "type": "integer"
+                },
+                "sensitive_detail": {
+                    "type": "string"
+                },
+                "time_created": {
+                    "type": "string"
+                },
+                "time_updated": {
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string"
                 }
             }
         },
